Lib: Pass all SpringBoot and MVC tests for database and REST classes.